--- a/src/app/neo/neo.component.html
+++ b/src/app/neo/neo.component.html
@@ -1,68 +1,27 @@
 <!-- Image background -->
 
-<!-- <div class="container-fluid">
+<div class="container-fluid">
     <img class="img-fluid" src="/assets/img/shooting-start.jpg" alt="Responsive image">
+</div>
+
+<!-- <div>
+  <ul *ngIf="neo?.near_earth_objects">
+  <li *ngFor="let n of neo.near_earth_objects[startDate]">{{n.is_potentially_hazardous_asteroid}}</li>
+  </ul>
 </div> -->
 
 <!-- Second part -->
-<!--
-<div class="container-fluid">
-	<div  class="row cards">
+
+<div *ngIf="neo?.near_earth_objects" class="container-fluid">
+	<div *ngFor="let n of neo.near_earth_objects[startDate]" class="row cards">
 
 			<div class="col-md-4">
 				<div class="card">
 					<div class="card-body">
-						<h4 class="card-title">Tony</h4>
+						<h4 class="card-title">{{ n.name }}}</h4>
 						<p class="card-text"></p>
 					</div>
 				</div>
 			</div>
-
-			<div class="col-md-4">
-				<div class="card">
-					<div class="card-body">
-						<h4 class="card-title">Tavi</h4>
-						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-4">
-				<div class="card">
-					<div class="card-body">
-						<h4 class="card-title">Tibi</h4>
-						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
-					</div>
-				</div>
-            </div>
-
-            <div class="col-md-4">
-				<div class="card">
-					<div class="card-body">
-						<h4 class="card-title">Tony</h4>
-						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-4">
-				<div class="card">
-					<div class="card-body">
-						<h4 class="card-title">Tavi</h4>
-						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-4">
-				<div class="card">
-					<div class="card-body">
-						<h4 class="card-title">Tibi</h4>
-						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
-					</div>
-				</div>
-			</div>
-
-
 	</div>
-</div> -->
+</div>
