added extra carousel slides and NeoWs content

--- a/src/app/insight/insight.component.html
+++ b/src/app/insight/insight.component.html
@@ -1,3 +1,5 @@
-<div class="insight">
-  <iframe src='https://mars.nasa.gov/layout/embed/image/insightweather/' width='1200' height='690'  scrolling='no' frameborder='0'></iframe>
+<h1>MARS WEATHER</h1>
+
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src='https://mars.nasa.gov/layout/embed/image/insightweather/'></iframe>
 </div>
