--- a/src/app/neo/neo.component.scss
+++ b/src/app/neo/neo.component.scss
@@ -1,7 +1,11 @@
-.container-fluid {
-    padding: 0px;
+.number {
+  color: rgb(61, 8, 92);
+  font-size: 75px;
+  text-align: center;
 }
 
-.col-md-4 {
-    padding: 0px;
+.neo-title {
+  text-align: center;
 }
+
+
