--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,13 +4,15 @@
 
 <div id="slides" class="carousel slide" data-ride="carousel">
 
-	<ul class="carousel-indicators">
-		<li data-target="#slides" data-slide-to="0" class="active"></li>
-	</ul>
+	<ol class="carousel-indicators">
+    <li data-target="#slides" data-slide-to="0" class="active"></li>
+    <li data-target="#slides" data-slide-to="1"></li>
+    <li data-target="#slides" data-slide-to="2"></li>
+	</ol>
 
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="/assets/img/space-background.png">
+			<img src="/assets/img/background2.jpg">
 			<div class="carousel-caption">
 				<h1 class="display-4">Final Space</h1>
 				<h3>Space Exploration Website</h3>
@@ -19,9 +21,45 @@
 				<button type="button" class="btn btn-primary btn-lg">Get Started
 				</button>
 			</div>
-		</div>
+    </div>
 
-	</div>
+
+    <div class="carousel-item ">
+      <img src="/assets/img/background.jpg">
+      <!-- <div class="carousel-caption">
+        <h1 class="display-4">Final Space</h1>
+        <h3>Space Exploration Website</h3>
+        <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO
+        </button>
+        <button type="button" class="btn btn-primary btn-lg">Get Started
+        </button>
+      </div> -->
+    </div>
+
+
+      <div class="carousel-item ">
+        <img src="/assets/img/background3.jpg">
+        <!-- <div class="carousel-caption">
+          <h1 class="display-4"></h1>
+          <h3></h3>
+          <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO
+          </button>
+          <button type="button" class="btn btn-primary btn-lg">Get Started
+          </button>
+        </div> -->
+      </div>
+
+
+
+  <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  </div>
 </div>
 
 <!--- Jumbotron -->
