--- a/src/app/neo/neo.component.scss
+++ b/src/app/neo/neo.component.scss
@@ -5,7 +5,18 @@
 }
 
 .neo-title {
+  margin-top: 30px;
   text-align: center;
 }
+
+.card-title {
+  text-align: center;
+}
+
+
+.cards {
+  border: 8px;
+}
+
 
 
