--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,11 @@
 
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="/assets/img/background2.jpg">
+      <div class="overlay">
+        <img src="/assets/img/background2.png" >
+        <div class="after"></div>
+      </div>
+
 			<div class="carousel-caption">
 				<h1 class="display-4">Final Space</h1>
 				<h3>Space Exploration Website</h3>
@@ -25,7 +29,7 @@
 
 
     <div class="carousel-item ">
-      <img src="/assets/img/background.jpg">
+      <img src="/assets/img/background.png">
       <!-- <div class="carousel-caption">
         <h1 class="display-4">Final Space</h1>
         <h3>Space Exploration Website</h3>
@@ -38,7 +42,7 @@
 
 
       <div class="carousel-item ">
-        <img src="/assets/img/background3.jpg">
+        <img src="/assets/img/background3.png">
         <!-- <div class="carousel-caption">
           <h1 class="display-4"></h1>
           <h3></h3>
@@ -55,6 +59,7 @@
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
+
   <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
@@ -92,8 +97,8 @@
 
 		<div class="col-12">
 			<h2 class="display-22">
-			The objective of this site is to show NASA data,
-			including imagery, eminently accessible to application developers.</h2>
+			The objective of this site is to display NASA data and
+			imagery, eminently accessible to application developers.</h2>
 		</div>
 
 	</div>
@@ -190,7 +195,7 @@
 
 			<div class="col-md-4">
 				<div class="card">
-					<!-- <img class="card-img-top" src="/assets/img/apod-icon.jpg"> -->
+					<img class="card-img-top" src="/assets/img/apod-icon.png">
 					<div class="card-body">
 						<h4 class="card-title">Apod</h4>
 						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
@@ -201,7 +206,7 @@
 
 			<div class="col-md-4">
 				<div class="card">
-					<!-- <img class="card-img-top" src="/assets/img/meteor.jpg"> -->
+					<img class="card-img-top" src="/assets/img/mars.png">
 					<div class="card-body">
 						<h4 class="card-title">NeoWs</h4>
 						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
@@ -212,7 +217,7 @@
 
 			<div class="col-md-4">
 				<div class="card">
-					<!-- <img class="card-img-top" src="/assets/img/mars.jpg"> -->
+					<img class="card-img-top" src="/assets/img/meteor.png">
 					<div class="card-body">
 						<h4 class="card-title">InSight</h4>
 						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
