--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,7 +3,23 @@
 .carousel-inner img {
   width: 100%;
   height: 100%;
-	// max-height: 90vh;
+
+}
+
+
+
+// Adding darker effect to firt image from carousel
+.overlay .after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  color: #FFF;
+}
+.overlay .after {
+  background: rgba(0, 0, 0, .3);
 }
 
 .carousel-caption {
@@ -12,11 +28,9 @@
 	transform: translateY(-50%);
 }
 
-
-
 .carousel-caption h1 {
 	font-size: 500%;
-
+  font-weight: 700;
 	text-transform: uppercase;
 	text-shadow: 1px 1px 30px #000;
 }
@@ -44,9 +58,11 @@
 
 
 .cards {
-	margin: 0 auto;
-	padding-bottom: 10rem;
+  width: 75%;
+  margin: 0 auto;
+  padding-bottom: 10rem;
 }
+
 
 .welcome {
 	width: 75%;
@@ -61,19 +77,6 @@
 	margin-top: .3rem;
 	margin-bottom: 1rem;
 }
-
-// .text-center {
-// 	width: 75%;
-// 	margin: 0 auto;
-// 	padding-bottom: 8rem;
-// }
-
-// .text-center hr {
-// 	border-top: 2px solid #b4b4b4;
-// 	width: 95%;
-// 	margin-top: .3rem;
-// 	margin-bottom: 1rem;
-// }
 
 .fa-rocket {
 	color: #e54d26;
@@ -173,7 +176,8 @@ hr.light-100 {
 	}
 
 	.carousel-caption h1 {
-		font-size: 350%
+    font-size: 350%
+
 	}
 
 	.carousel-caption h3 {
@@ -188,7 +192,8 @@ hr.light-100 {
 	}
 
 	.display-4 {
-		font-size: 200%;
+    font-size: 200%;
+    font-weight: 900;
 	}
 
 	.social a {
@@ -198,16 +203,15 @@ hr.light-100 {
 
 }
 @media (max-width: 576px) {
-  	.carousel-caption {
-	top: 40%;
-
+  .carousel-caption {
+	  top: 40%;
 	}
 	.carousel-caption h1 {
-	font-size: 250%
+	  font-size: 250%
 	}
 
 	.carousel-caption h3 {
-	font-size: 110%;
+	  font-size: 110%;
 	}
 
 	.carousel-caption .btn {
