polished site content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,10 +20,10 @@
 			<div class="carousel-caption">
 				<h1 class="display-4">Final Space</h1>
 				<h3>Space Exploration Website</h3>
-				<button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO
+				<!-- <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO
 				</button>
 				<button type="button" class="btn btn-primary btn-lg">Get Started
-				</button>
+				</button> -->
 			</div>
     </div>
 
@@ -177,8 +177,8 @@
 			<i class="fas fa-meteor"></i>
 			<h3>Asteroids NeoWs</h3>
 			<p><strong>NeoWs (Near Earth Object Web Service)</strong>
-			is a RESTful web service for near earth Asteroid
-			<!-- information. With NeoWs you can search for
+			is a RESTful web service for near earth asteroid
+			information.<!--  With NeoWs you can search for
 			Asteroids based on their closest approach date
 			to Earth as well as browse the overall data-set.</p> -->
 			</p>
@@ -198,7 +198,10 @@
 					<img class="card-img-top" src="/assets/img/apod-icon.png">
 					<div class="card-body">
 						<h4 class="card-title">Apod</h4>
-						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
+						<p class="card-text">Check out the Astronomic Picture of the Day. This is one of the most
+              popular websites across all federal agencies.</p>
+              <!-- It has the popular appeal of a Justin Bieber
+              video. -->
 						<a routerLink="/apod" class="btn btn-outline-secondary">Visit Apod</a>
 					</div>
 				</div>
@@ -209,7 +212,8 @@
 					<img class="card-img-top" src="/assets/img/mars.png">
 					<div class="card-body">
 						<h4 class="card-title">NeoWs</h4>
-						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
+						<p class="card-text">With NeoWs you can see asteroids based on their closest approach date
+              to Earth.</p>
 						<a routerLink="/neo" class="btn btn-outline-secondary">Visit NeoWs</a>
 					</div>
 				</div>
@@ -220,7 +224,8 @@
 					<img class="card-img-top" src="/assets/img/meteor.png">
 					<div class="card-body">
 						<h4 class="card-title">InSight</h4>
-						<p class="card-text">afafsqnfiqnfqnfqnfoqinwfoqinwfqiwf</p>
+						<p class="card-text">NASA's InSight Mars lander takes
+              continuous weather measurements on Mars near its equator.</p>
 						<a routerLink="/insight" class="btn btn-outline-secondary">Visit InSight</a>
 					</div>
 				</div>
@@ -229,9 +234,11 @@
 	</div>
 </div>
 
+<hr>
+
 <!--- Two Column Section -->
 
-<div class="container-fluid padding">
+<!-- <div class="container-fluid padding">
 	<div class="row padding">
 
 		<div class="col-lg-6">
@@ -250,7 +257,7 @@
 
 	<hr class="my-4">
 
-</div>
+</div> -->
 
 <!--- Connect -->
 
