--- a/src/app/insight/insight.component.html
+++ b/src/app/insight/insight.component.html
@@ -1,4 +1,4 @@
-<h1>MARS WEATHER</h1>
+<!-- <h1>MARS WEATHER</h1> -->
 
 <div class="embed-responsive embed-responsive-16by9">
   <iframe class="embed-responsive-item" src='https://mars.nasa.gov/layout/embed/image/insightweather/'></iframe>
