added maps to home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -104,30 +104,14 @@
 	</div>
 </div>
 
-<!--- Emoji Section -->
+<!--- ISS Location Section -->
 
-<button class="fun" data-toggle="collapse" data-target="#emoji">Click for fun
+<button class="fun" data-toggle="collapse" data-target="#map">Did you know?
 </button>
-<div id="emoji" class="collapse">
+<div id="map" class="collapse">
 	<div class="container-fluid padding">
 		<div class="row text-center">
-
-			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="/assets/img/gif/panda.gif">
-			</div>
-
-			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="/assets/img/gif/poo.gif">
-			</div>
-
-			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="/assets/img/gif/unicorn.gif">
-			</div>
-
-			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="/assets/img/gif/chicken.gif">
-			</div>
-
+      <div #map style="width:100%;height:400px"></div>
 		</div>
 	</div>
 </div>
