--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,19 @@
-
-
 <!--- Image Slider -->
 
 <div id="slides" class="carousel slide" data-ride="carousel">
 
 	<ol class="carousel-indicators">
-    <li data-target="#slides" data-slide-to="0" class="active"></li>
-    <li data-target="#slides" data-slide-to="1"></li>
-    <li data-target="#slides" data-slide-to="2"></li>
+		<li data-target="#slides" data-slide-to="0" class="active"></li>
+		<li data-target="#slides" data-slide-to="1"></li>
+		<li data-target="#slides" data-slide-to="2"></li>
 	</ol>
 
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-      <div class="overlay">
-        <img src="/assets/img/background2.png" >
-        <div class="after"></div>
-      </div>
-
+			<div class="overlay">
+				<img src="/assets/img/background2.png">
+				<div class="after"></div>
+			</div>
 			<div class="carousel-caption">
 				<h1 class="display-4">Final Space</h1>
 				<h3>Space Exploration Website</h3>
@@ -25,12 +22,11 @@
 				<button type="button" class="btn btn-primary btn-lg">Get Started
 				</button> -->
 			</div>
-    </div>
+		</div>
 
-
-    <div class="carousel-item ">
-      <img src="/assets/img/background.png">
-      <!-- <div class="carousel-caption">
+		<div class="carousel-item ">
+			<img src="/assets/img/background.png">
+			<!-- <div class="carousel-caption">
         <h1 class="display-4">Final Space</h1>
         <h3>Space Exploration Website</h3>
         <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO
@@ -38,33 +34,30 @@
         <button type="button" class="btn btn-primary btn-lg">Get Started
         </button>
       </div> -->
-    </div>
+		</div>
 
+		<div class="carousel-item ">
+			<img src="/assets/img/background3.png">
+			<!-- <div class="carousel-caption">
+        <h1 class="display-4"></h1>
+        <h3></h3>
+        <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO
+        </button>
+        <button type="button" class="btn btn-primary btn-lg">Get Started
+        </button>
+      </div> -->
+		</div>
 
-      <div class="carousel-item ">
-        <img src="/assets/img/background3.png">
-        <!-- <div class="carousel-caption">
-          <h1 class="display-4"></h1>
-          <h3></h3>
-          <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO
-          </button>
-          <button type="button" class="btn btn-primary btn-lg">Get Started
-          </button>
-        </div> -->
-      </div>
+		<a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
 
-
-
-  <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-
-  <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-  </div>
+		<a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
 </div>
 
 <!--- Jumbotron -->
@@ -73,11 +66,11 @@
 	<div class="row jumbotron">
 
 		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead">This will help with learning bootstrap</p>
+			<p class="lead">Check out NASA's official site!</p>
 		</div>
 
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-			<a href="#"><button class="btn btn-outline-secondary btn-lg">Space button</button></a>
+			<a href="https://www.nasa.gov/" target="_blank"><button class="btn btn-outline-secondary btn-lg">NASA site</button></a>
 		</div>
 
 	</div>
@@ -97,32 +90,36 @@
 
 		<div class="col-12">
 			<h2 class="display-22">
-			The objective of this site is to display NASA data and
-			imagery, eminently accessible to application developers.</h2>
+				The objective of this site is to display NASA data and
+				imagery, eminently accessible to application developers.</h2>
 		</div>
+
+		<hr>
 
 	</div>
 </div>
 
-<!--- ISS Location Section -->
+<hr>
 
-<button class="fun" data-toggle="collapse" data-target="#map">Did you know?
-</button>
-<div id="map" class="collapse">
-	<div class="container-fluid padding">
-		<div class="row text-center">
-      <div #map style="width:100%;height:400px"></div>
+<!--- Two Column Section -->
+
+<div class="container-fluid padding">
+	<div class="row padding">
+
+		<div class="col-lg-6">
+			<h2>International Space Station Current Location</h2>
+			<p>This is a simple api to return the current location of the ISS.</p>
+			<p>It returns the current latitude and longitude of the space station.</p>
+			<br>
 		</div>
+
+		<div class="col-lg-6"><img src="/assets/img/iss.png" class="img-fluid"></div>
+
 	</div>
+
+	<hr class="my-4">
+
 </div>
-
-<!--- Fixed background -->
-
-<figure>
-	<div class="fixed-wrap">
-		<div id="fixed"></div>
-	</div>
-</figure>
 
 <!--- Welcome with Three Columns Section  -->
 
@@ -130,27 +127,29 @@
 	<div class="row welcome text-center">
 		<div class="col-12">
 			<h1 class="display-4">Check out NASA's API services:</h1>
-		</div>
+    </div>
+
 		<hr class="my-4">
 
 		<div class="col-xs-12 col-md-4">
 			<i class="fas fa-rocket"></i>
 			<h3>APOD</h3>
 			<p>One of the most popular websites at
-			NASA is the <strong>Astronomy Picture of the Day (APOD)</strong>.
-			<!-- In fact, this is one of the most
+				NASA is the <strong>Astronomy Picture of the Day (APOD)</strong>.
+				<!-- In fact, this is one of the most
 			popular websites across all federal agencies.
 			It has the popular appeal of a Justin Bieber
 			video.</p> -->
 			</p>
-    </div>
+		</div>
 
-    <div class="col-xs-12 col-md-4">
+		<div class="col-xs-12 col-md-4">
 			<i class="fas fa-meteor"></i>
 			<h3>Asteroids NeoWs</h3>
 			<p><strong>NeoWs (Near Earth Object Web Service)</strong>
-			is a RESTful web service for near earth asteroid
-			information.<!--  With NeoWs you can search for
+				is a RESTful web service for near earth asteroid
+				information.
+				<!--  With NeoWs you can search for
 			Asteroids based on their closest approach date
 			to Earth as well as browse the overall data-set.</p> -->
 			</p>
@@ -160,13 +159,13 @@
 			<i class="fas fa-satellite-dish"></i>
 			<h3>InSight</h3>
 			<p>This API provides <strong>Mars Weather Service</strong> with per-Sol summary data for
-			each of the last seven available Sols (Martian Days).
-			<!-- As more data from a particular Sol are downlinked from
+				each of the last seven available Sols (Martian Days).
+				<!-- As more data from a particular Sol are downlinked from
 			the spacecraft (sometimes several days later),
 			these values are recalculated, and consequently may change
 			as more data is received on Earth.</p> -->
 			</p>
-    </div>
+		</div>
 
 		<hr class="my-4">
 	</div>
@@ -175,73 +174,94 @@
 <!--- Cards -->
 
 <div class="container-fluid padding">
-	<div class="row cards">
+  <div class="row cards">
 
-			<div class="col-md-4">
-				<div class="card">
-					<img class="card-img-top" src="/assets/img/apod-icon.png">
-					<div class="card-body">
-						<h4 class="card-title">Apod</h4>
-						<p class="card-text">Check out the Astronomic Picture of the Day. This is one of the most
-              popular websites across all federal agencies.</p>
-              <!-- It has the popular appeal of a Justin Bieber
-              video. -->
-						<a routerLink="/apod" class="btn btn-outline-secondary">Visit Apod</a>
-					</div>
-				</div>
-			</div>
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="/assets/img/apod-icon.png">
+        <div class="card-body">
+          <h4 class="card-title">Apod</h4>
+          <p class="card-text">Check out the Astronomic Picture of the Day. This is one of the most
+            popular websites across all federal agencies.</p>
+          <!-- It has the popular appeal of a Justin Bieber
+      video. -->
+          <a routerLink="/apod" class="btn btn-outline-secondary">Visit Apod</a>
+        </div>
+      </div>
+    </div>
 
-			<div class="col-md-4">
-				<div class="card">
-					<img class="card-img-top" src="/assets/img/meteor.png">
-					<div class="card-body">
-						<h4 class="card-title">NeoWs</h4>
-						<p class="card-text">With NeoWs you can see asteroids based on their closest approach date
-              to Earth.</p>
-						<a routerLink="/neo" class="btn btn-outline-secondary">Visit NeoWs</a>
-					</div>
-				</div>
-			</div>
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="/assets/img/meteor.png">
+        <div class="card-body">
+          <h4 class="card-title">NeoWs</h4>
+          <p class="card-text">With Near Earth Objects Web Service you can see asteroids based on their
+            closest approach date
+            to Earth.</p>
+          <a routerLink="/neo" class="btn btn-outline-secondary">Visit NeoWs</a>
+        </div>
+      </div>
+    </div>
 
-			<div class="col-md-4">
-				<div class="card">
-					<img class="card-img-top" src="/assets/img/mars.png">
-					<div class="card-body">
-						<h4 class="card-title">InSight</h4>
-						<p class="card-text">NASA's InSight Mars lander takes
-              continuous weather measurements on Mars near its equator.</p>
-						<a routerLink="/insight" class="btn btn-outline-secondary">Visit InSight</a>
-					</div>
-				</div>
-			</div>
+    <div class="col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="/assets/img/mars.png">
+        <div class="card-body">
+          <h4 class="card-title">InSight</h4>
+          <p class="card-text">NASA's InSight Mars lander takes
+            continuous weather measurements on Mars near its equator.</p>
+          <a routerLink="/insight" class="btn btn-outline-secondary">Visit InSight</a>
+        </div>
+      </div>
+    </div>
 
+  </div>
+</div>
+
+
+<!--- Fixed background -->
+
+<figure>
+	<div class="fixed-wrap">
+		<div id="fixed"></div>
+	</div>
+</figure>
+
+
+<!--- ISS Location Section -->
+
+<button class="fun" data-toggle="collapse" data-target="#map">Did you know?
+</button>
+<div id="map" class="collapse">
+	<div class="container-fluid padding">
+		<div class="row text-center">
+			<div #map style="width:100%;height:400px"></div>
+		</div>
 	</div>
 </div>
 
-<hr>
+<!-- <hr class="my-4"> -->
 
 <!--- Two Column Section -->
 
-<!-- <div class="container-fluid padding">
+<div class="container-fluid padding">
 	<div class="row padding">
 
+		<div class="col-lg-6"><img src="/assets/img/iss.png" class="img-fluid"></div>
+
 		<div class="col-lg-6">
-			<h2>Some other text</h2>
-			<p>Huge paragraph Huge paragraph Huge paragraph Huge paragraph</p>
-			<p>Huge paragraph Huge paragraph Huge paragraph Huge paragraph</p>
+			<h2>Find out the Current Location of the International Space Station</h2>
+			<p>This is a simple api to return the current location of the ISS on google maps.</p>
+			<p>It returns the current latitude and longitude of the space station at the marked dot.</p>
 			<br>
-
-		</div>
-
-		<div class="col-lg-6">
-			<img src="/assets/img/bootstrap2.png" class="img-fluid">
 		</div>
 
 	</div>
 
-	<hr class="my-4">
 
-</div> -->
+</div>
+
+<hr>
 
 <!--- Connect -->
 
