--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,7 +8,7 @@
 
 
 
-// Adding darker effect to firt image from carousel
+// Adding darker effect to first image from carousel
 .overlay .after {
   position: absolute;
   top: 0;
