--- a/src/app/apod/apod.component.scss
+++ b/src/app/apod/apod.component.scss
@@ -5,21 +5,19 @@
 }
 
 
-
-
 // Floor fade
 
-body {
-    margin: 0;
-  }.floor-fade {
-      background-size: cover;
-      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) );
-      position: relative;
-      color: white;
-      background-color: rgb(29, 28, 28);
-  }
+// body {
+//     margin: 0;
+//   }.floor-fade {
+//       background-size: cover;
+//       background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) );
+//       position: relative;
+//       color: white;
+//       background-color: rgb(29, 28, 28);
+//   }
 
-.container-fluid {
-  margin: 0;
-  padding: 0;
-}
+// .container-fluid {
+//   margin: 0;
+//   padding: 0;
+// }
